--- a/public/site/style/pages.css
+++ b/public/site/style/pages.css
@@ -283,10 +283,12 @@
 
 /* Page Footer */
 .page-footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 15px;
     text-align: center;
-    padding: 20px;
-    background-color: var(--card);
-    margin-top: 25px;
     border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
 
