modified to fit with new db logic, rework of footer and error displays

--- a/public/site/style/auth.css
+++ b/public/site/style/auth.css
@@ -170,6 +170,10 @@
     text-decoration: underline;
 }
 
+#authError {
+    white-space: pre-line;
+}
+
 /* Error Message */
 .auth-error {
     background-color: #fee2e2;
